[fix] letter-spacing: -0.03em

--- a/day2/float.css
+++ b/day2/float.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  letter-spacing: -0.02em;
+  letter-spacing: -0.03em;
 }
 
 ul, li {
